# zarnitsa

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_framebuffer.cpp
Application/: Application.cpp  Application.hpp  ApplicationLayer.hpp  Layer.hpp
Application/ImGuiLayer/: ImGuiLayer.cpp  ImGuiLayer.hpp
Common/: Assert.hpp  Common.hpp  Logger.cpp  Logger.hpp  Macro.hpp  Math.hpp  Status.hpp  Timestep.hpp
Dependencies/: CMakeLists.txt
Dependencies/assimp/: CMakeLists.txt
Dependencies/assimp/contrib/zlib/: CMakeLists.txt
Dependencies/assimp/include/: revision.h
Dependencies/flecs_static/: CMakeLists.txt
Dependencies/glm/: CMakeLists.txt
Dependencies/spdlog/: CMakeLists.txt
Dependencies/stb/: CMakeLists.txt
Editor/: PropertyEditor.cpp  PropertyEditor.hpp
Graphics/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Graphics/Internal/: Common.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  Internal.hpp
Graphics/Internal/OpenGL/: GraphicsDeviceOpenGL.cpp  GraphicsDeviceOpenGL.hpp
Graphics/Internal/OpenGL/glad/: glad.c  glad.h
Platform/: CMakeLists.txt  Common.hpp  Events.cpp  Events.hpp  FileWatcher.hpp  Input.cpp  Input.hpp  Platform.cpp  Platform.hpp  Window.cpp  Window.hpp
Platform/Dependencies/: CMakeLists.txt
Platform/Internal/: Common.hpp  FileWatcher.hpp
Platform/Internal/Win32/: FileWatcherWin32.cpp  FileWatcherWin32.hpp
Resources/: monkey.glb
Resources/Cache/: Default.frag.gl.spv  Default.frag.vk.spv  Default.vert.gl.spv  Default.vert.vk.spv  Grid.frag.gl.spv  Grid.frag.vk.spv  Grid.vert.gl.spv  Grid.vert.vk.spv  Screen.frag.gl.spv  Screen.frag.vk.spv  Screen.vert.gl.spv  Screen.vert.vk.spv  ScreenDefault.frag.vk.spv  ScreenDefault.vert.gl.spv  SolidColor.frag.gl.spv  SolidColor.frag.vk.spv  SolidColor.vert.gl.spv  SolidColor.vert.vk.spv
Resources/Shaders/: Blur.glsl  Default.glsl  Depth.glsl  GBuffer.glsl  Grid.glsl  Lighting.glsl  Material232.glsl  Outline.glsl  Screen.glsl  ScreenMultisampled.glsl  ScreenQuad.glsl  SolidColor.glsl  test_include.inl.glsl
Sandbox/: DebugLayer.cpp  DebugLayer.hpp  SandboxLayer.cpp  SandboxLayer.hpp
Scene/: AssetManager.cpp  AssetManager.hpp  Components.hpp  SceneRenderer.hpp  ViewportCamera.cpp  ViewportCamera.hpp  World.cpp  World.hpp
